--- a/trunk/Common/ServiceStack.Common/ServiceStack.WebHost.Endpoints/ServiceStack.WebHost.Endpoints.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.WebHost.Endpoints/ServiceStack.WebHost.Endpoints.csproj
@@ -58,9 +58,13 @@
   <ItemGroup>
     <Compile Include="EndpointHostBase.cs" />
     <Compile Include="EndpointType.cs" />
-    <Compile Include="Extensions\HttpListenerResponseExtensions.cs" />
-    <Compile Include="Extensions\HttpResponseExtensions.cs" />
+    <Compile Include="Extensions\IHttpResponseExtensions.cs" />
+    <Compile Include="Extensions\Backup\HttpListenerResponseExtensions.cs" />
+    <Compile Include="Extensions\HttpListenerResponseWrapper.cs" />
+    <Compile Include="Extensions\Backup\HttpResponseExtensions.cs" />
     <Compile Include="Extensions\HttpRequestExtensions.cs" />
+    <Compile Include="Extensions\HttpResponseWrapper.cs" />
+    <Compile Include="Extensions\IHttpResponse.cs" />
     <Compile Include="MetadataConfig.cs" />
     <Compile Include="Results\HtmlResult.cs" />
     <Compile Include="Support\ContentType.cs" />
